--- a/vercel.json
+++ b/vercel.json
@@ -1,32 +1,19 @@
 {
   "version": 2,
+  "name": "hr-erp-system",
   "builds": [
     {
       "src": "backend/server.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
       "dest": "backend/server.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "frontend/build/$1"
     }
   ],
   "env": {
-    "MONGODB_URI": "@mongodb_uri",
-    "JWT_SECRET": "@jwt_secret",
-    "NODE_ENV": "production",
-    "FRONTEND_URL": "@frontend_url"
+    "NODE_ENV": "production"
   }
 }
