--- a/.vercelignore
+++ b/.vercelignore
@@ -1,11 +1,30 @@
-# Vercel Ignore
+# Node modules
 node_modules
+frontend/node_modules
+backend/node_modules
+
+# Environment files (will be set in Vercel dashboard)
 .env
 .env.local
-.git
-*.log
-.DS_Store
+.env.development
+.env.test
 
-# Keep these for deployment
-!frontend/build
-!backend
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode
+.idea
+
+# Test coverage
+coverage
+
+# Misc
+.cache
