Configure for Vercel monorepo - deploy frontend and backend together

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,34 @@
 {
-    "buildCommand": "cd frontend && npm install && npm run build",
-    "outputDirectory": "frontend/build",
-    "framework": null,
-    "installCommand": "npm install",
-    "devCommand": "npm run dev"
+    "version": 2,
+    "builds": [
+        {
+            "src": "frontend/package.json",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "build"
+            }
+        },
+        {
+            "src": "backend/**/*.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "/backend/server.js"
+        },
+        {
+            "src": "/static/(.*)",
+            "dest": "/frontend/build/static/$1"
+        },
+        {
+            "src": "/(.*\\.(js|css|json|ico|png|jpg|jpeg|svg|gif|woff|woff2|ttf|eot))",
+            "dest": "/frontend/build/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/frontend/build/index.html"
+        }
+    ]
 }
