--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,7 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "frontend/package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "build"
-            }
-        },
-        {
-            "src": "backend/**/*.js",
-            "use": "@vercel/node"
-        }
-    ],
+    "buildCommand": "cd frontend && npm install && npm run build",
+    "outputDirectory": "frontend/build",
     "routes": [
         {
             "src": "/api/(.*)",
@@ -30,5 +19,10 @@
             "src": "/(.*)",
             "dest": "/frontend/build/index.html"
         }
-    ]
+    ],
+    "functions": {
+        "backend/server.js": {
+            "runtime": "@vercel/node@3.0.7"
+        }
+    }
 }
