--- a/vercel.json
+++ b/vercel.json
@@ -2,27 +2,14 @@
     "version": 2,
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/build",
-    "routes": [
+    "rewrites": [
         {
-            "src": "/api/(.*)",
-            "dest": "/backend/server.js"
+            "source": "/api/:path*",
+            "destination": "/api"
         },
         {
-            "src": "/static/(.*)",
-            "dest": "/frontend/build/static/$1"
-        },
-        {
-            "src": "/(.*\\.(js|css|json|ico|png|jpg|jpeg|svg|gif|woff|woff2|ttf|eot))",
-            "dest": "/frontend/build/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/frontend/build/index.html"
+            "source": "/(.*)",
+            "destination": "/frontend/build/index.html"
         }
-    ],
-    "functions": {
-        "backend/server.js": {
-            "runtime": "@vercel/node@3.0.7"
-        }
-    }
+    ]
 }
